# GAMR

./: .dockerignore  .gitignore  Dockerfile  HAMR_Project_Concept.docx  HAMR_Project_Concept.md  README.md  convert_docx.py  docker-compose.yml  future_ideas.md  idea.txt  implementation_plan.md  implementation_plan_2.md  pyproject.toml
configs/: fitted_params.json  model.yaml  runtime.yaml  scheduler.yaml
recorder/: __init__.py  recorder.py
runs/: .gitkeep
runs/Run_001/: config.json  hardware.json
runs/Run_002/: hardware.json
runs/Run_003/: hardware.json  metrics.json  summary.md
runs/Run_004/: hardware.json  metrics.json  summary.md
runs/Run_007/: metrics.json  phase3_benchmark.json  summary.md
runs/Run_008/: events.json  hardware.json  latency.csv  vram.csv
runs/Run_009/: config.json  events.json  gpu.csv  hardware.json  latency.csv  metrics.json  ram.csv  summary.md  vram.csv
runs/Run_010/: events.json  gpu.csv  phase5_adaptive_report.json  ram.csv
runtime/: __init__.py  config.py  event_bus.py  hardware_scan.py  logger.py  model_loader.py  run_manager.py  runtime.py
runtime/controllers/: __init__.py  decision_engine.py  memory_controller.py
runtime/hal/: __init__.py  base.py  (+2 more)
tests/: test_adaptive.py  test_config.py  test_event_bus.py  test_hardware_scan.py  test_memory_controller.py  test_memory_object.py  test_monitor.py  test_object_manager.py  test_pool.py  test_pool_manager.py  test_recorder.py  test_run_manager.py  test_scheduler.py  test_static_prefetch.py  test_validation.py
validation/: __init__.py  engine.py  report.py
(+16 files in other folders)
